# bb-event-service

./: .bazelrc  BUILD.bazel  README.md  WORKSPACE
cmd/bb_event_service/: BUILD.bazel  build_event_server.go  main.go
patches/com_github_bazelbuild_bazel/: build_event_stream.diff
pkg/proto/configuration/bb_event_service/: BUILD.bazel  bb_event_service.proto
