# gazelle:ignore

load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "bb_event_service_proto",
    srcs = ["bb_event_service.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/blobstore:blobstore_proto",
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/global:global_proto",
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/grpc:grpc_proto",
    ],
)

go_proto_library(
    name = "bb_event_service_go_proto",
    importpath = "github.com/buildbarn/bb-event-service/pkg/proto/configuration/bb_event_service",
    proto = ":bb_event_service_proto",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/blobstore:blobstore",
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/global:global",
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/grpc:grpc",
    ],
)

go_library(
    name = "bb_event_service",
    embed = [":bb_event_service_go_proto"],
    importpath = "github.com/buildbarn/bb-event-service/pkg/proto/configuration/bb_event_service",
    visibility = ["//visibility:public"],
)
